# mishou-3d

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
shaders/: shader.frag  shader.vert
src/: app.rs  consts.rs  lib.rs  log.rs  main.rs  utils.rs
src/args/: arguments.rs  checks.rs  mod.rs  parsers.rs
src/camera/: camera.rs  camera_config.rs  camera_input.rs  camera_movement.rs  matrix_unit.rs  mod.rs
src/error/: app_error.rs  mod.rs  other_error.rs  parser_error.rs
src/gui/: gui_manager.rs  mod.rs
src/model/: mod.rs  model.rs  model_manager.rs  vertex.rs
src/render/: mod.rs  render_mode.rs  render_state.rs  shaders.rs
src/state/: clock.rs  fps_mode.rs  mod.rs  scene_config.rs  window_manager.rs
