[package]
name = "mishou-3d"
version = "1.0.1"
edition = "2024"
description = "Simple Rust application for viewing, and exploring 3D models"
authors = ["SQD.exe"]
repository = "https://github.com/SQDexe/mishou-3d"
readme = "README.md"
license = "GPL-3.0-only"

[dependencies]
bitfields = "3.0.0"
clap = { version = "4.6.1", features = ["derive"] }
color-art = { version = "0.3.9", default-features = false }
const-str = { version = "1.1.0", features = ["proc"] }
egui-file-dialog = "0.10.0"
egui_winit_vulkano = "0.28.0"
env_logger = { version = "0.11.10", default-features = false, features = ["auto-color"] }
glam = "0.33.0"
itertools = "0.15.0"
log = { version = "0.4.30", features = ["max_level_info", "release_max_level_info"] }
rfd = "0.17.2"
sqds-tools = { git = "https://github.com/SQDexe/sqds-tools", version = "1.4.1", features = ["std"] }
thiserror = "2.0.18"
tobj = "4.0.3"
vulkano = { version = "0.35.2", default-features = false, features = ["macros", "document_unchecked"] }
vulkano-shaders = "0.35.0"
vulkano-util = "0.35.0"
winit = "0.30.13"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.61.2"

[build-dependencies]
winapi = { version = "0.3.9", features = ["winnt"] }
winresource = "0.1.31"
